# undertalk_test

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_migration.py
app/: main.py
app/api/: auth.py  dashboard.py  dependencies.py  orders.py  tenants.py
app/core/: config.py  logging.py  security.py
app/db/: base.py  session.py
app/models/: order_model.py  tenant_model.py  user_model.py
app/repositories/: order_repository.py  tenant_repository.py
app/schemas/: auth_schema.py  order_schema.py  tenant_schema.py
app/services/: order_service.py  tenant_service.py
tests/: conftest.py  test_health.py  test_order_api.py  test_order_service.py  test_tenant_api.py  test_tenant_service.py
